feat: metrics scraper