@@ -3,15 +3,16 @@ package dev.zeann3th.stresspilot.core.services.flows;
 import dev.zeann3th.stresspilot.core.domain.commands.flow.RunFlowCommand;
 import dev.zeann3th.stresspilot.core.domain.entities.*;
 import dev.zeann3th.stresspilot.core.domain.enums.ErrorCode;
+import dev.zeann3th.stresspilot.core.domain.enums.FlowStepType;
 import dev.zeann3th.stresspilot.core.domain.enums.RunStatus;
 import dev.zeann3th.stresspilot.core.domain.exception.CommandExceptionBuilder;
 import dev.zeann3th.stresspilot.core.ports.store.EnvironmentVariableStore;
 import dev.zeann3th.stresspilot.core.ports.store.ProjectStore;
 import dev.zeann3th.stresspilot.core.ports.store.RunStore;
-import dev.zeann3th.stresspilot.core.domain.enums.FlowStepType;
 import dev.zeann3th.stresspilot.core.services.ActiveRunRegistry;
 import dev.zeann3th.stresspilot.core.services.RequestLogService;
 import dev.zeann3th.stresspilot.core.services.flows.nodes.FlowNodeHandlerFactory;
+import dev.zeann3th.stresspilot.core.services.metrics.MetricsPollerManager;
 import lombok.extern.slf4j.Slf4j;
 import org.pf4j.ExtensionPoint;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -35,24 +36,17 @@ public abstract class FlowExecutor implements ExtensionPoint {
     @Autowired protected RunStore runStore;
     @Autowired protected ActiveRunRegistry activeRunRegistry;
     @Autowired protected RequestLogService requestLogService;
+    @Autowired protected MetricsPollerManager metricsPollerManager;
     @Autowired protected FlowNodeHandlerFactory nodeHandlerFactory;
 
     public abstract String getType();
 
     public abstract boolean supports(String type);
 
-    /**
-     * Maximum number of virtual threads this executor will spawn.
-     * Override to restrict concurrency (e.g. Playwright must return 1).
-     */
     protected int maxThreads() {
         return Integer.MAX_VALUE;
     }
 
-    /**
-     * Template method — orchestrates the full run lifecycle.
-     * Plugin makers do not override this; they implement {@link #executeWorker} instead.
-     */
     public final String execute(String runId, FlowEntity flow, List<FlowStepEntity> steps, RunFlowCommand cmd) {
         Map<String, FlowStepEntity> stepMap = steps.stream()
                 .collect(Collectors.toMap(FlowStepEntity::getId, s -> s));
@@ -64,6 +58,7 @@ public abstract class FlowExecutor implements ExtensionPoint {
                 .threads(cmd.getThreads())
                 .duration(cmd.getTotalDuration())
                 .rampUpDuration(cmd.getRampUpDuration())
+                .metricsEndpoint(cmd.getMetricsEndpoint())
                 .startedAt(LocalDateTime.now())
                 .build());
 
@@ -87,13 +82,14 @@ public abstract class FlowExecutor implements ExtensionPoint {
             baseEnv.putAll(cmd.getVariables());
         }
 
-        int threads = Math.min(Math.max(1, cmd.getThreads()), maxThreads());
+        int threads = Math.clamp(cmd.getThreads(), 1, maxThreads());
         long totalMs = (long) cmd.getTotalDuration() * 1000;
         long rampUpMs = (long) cmd.getRampUpDuration() * 1000;
         long rampDelay = threads > 1 ? rampUpMs / (threads - 1) : 0;
         long deadline = System.currentTimeMillis() + totalMs;
 
         beforeWorkers(runId, cmd);
+        metricsPollerManager.start(run);
 
         try (ExecutorService pool = Executors.newThreadPerTaskExecutor(
                 Thread.ofVirtual().name("sp-worker-" + runId + "-", 0).factory())) {
@@ -130,6 +126,7 @@ public abstract class FlowExecutor implements ExtensionPoint {
             }
 
         } finally {
+            metricsPollerManager.stop(runId);
             afterWorkers(runId);
             activeRunRegistry.deregisterRun(runId);
 
@@ -150,31 +147,15 @@ public abstract class FlowExecutor implements ExtensionPoint {
         return runId;
     }
 
-    /**
-     * Called once after the run is registered but before any workers are spawned.
-     * Override to perform executor-specific setup (e.g. registering with a breakpoint registry).
-     */
     protected void beforeWorkers(String runId, RunFlowCommand cmd) { }
 
-    /**
-     * Called once in the finally block after all workers finish, before the run is deregistered.
-     * Override to perform executor-specific teardown.
-     */
     protected void afterWorkers(String runId) { }
 
-    /**
-     * Executes the work for a single virtual thread.
-     * Plugin makers implement this method — the infrastructure (run save, project lookup,
-     * env merge, register/deregister, finalize) is handled by the template above.
-     */
     protected abstract void executeWorker(int threadId, RunEntity run,
             Map<String, FlowStepEntity> stepMap,
             Map<String, Object> environment,
             long totalMs, AtomicBoolean stopSignal);
 
-    /**
-     * Walks the flow graph for one iteration, from startStep until there is no next node.
-     */
     protected final void executeIteration(FlowStepEntity startStep,
             Map<String, FlowStepEntity> stepMap,
             FlowExecutionContext ctx) {
@@ -204,17 +185,14 @@ public abstract class FlowExecutor implements ExtensionPoint {
                 .orElse(null);
     }
 
-    /**
-     * Called by {@link FlowExecutorFactory} to inject infrastructure dependencies
-     * into plugin-loaded extensions that are not managed by Spring.
-     */
     public void initInfra(ProjectStore ps, EnvironmentVariableStore evs, RunStore rs,
-            ActiveRunRegistry arr, RequestLogService rls, FlowNodeHandlerFactory nhf) {
+            ActiveRunRegistry arr, RequestLogService rls, MetricsPollerManager mpm, FlowNodeHandlerFactory nhf) {
         this.projectStore = ps;
         this.envVarStore = evs;
         this.runStore = rs;
         this.activeRunRegistry = arr;
         this.requestLogService = rls;
+        this.metricsPollerManager = mpm;
         this.nodeHandlerFactory = nhf;
     }
 }
